<resources>
    <string name="app_name">HiUArtist</string>

    <!-- Loading / Splash Screen-->
    <string name="lema">Surprise and Change the world</string>

    <!-- Sign in -->
    <string name="sign_in">Sign In</string>
    <string name="instagram_app_id">07b61414512a45dcb8e86e087431f2a2</string>
    <string name="facebook_app_id">1931307483801819</string>
    <string name="fb_login_protocol_scheme">fb1931307483801819</string>
    <string name="title_activity_insta">InstaActivity</string>
    <string name="login_with">Login with</string>
    <string name="new_here">New here?</string>
    <string name="sign_up">Sign Up</string>

    <!-- WalkThrough -->
    <string name="first_title">Select your favorite person</string>
    <string name="first_sub">sportsman, actor, singer, writer ...</string>
    <string name="second_title">Fill out the form</string>
    <string name="second_sub">Everything with the information of the lucky one</string>
    <string name="third_title">Choose a charity foundation</string>
    <string name="third_sub">Make a donation, help the artist and get one of the best gifts you ever had</string>

    <!-- Requests -->
    <string name="requests">Requests</string>
    <string name="date">Date</string>
    <string name="country">Country</string>
    <string name="name">Name</string>
    <string name="most_recents">Most recents</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="nobember">November</string>
    <string name="december">December</string>
    <string name="by_name">By name</string>
    <string name="reply">Reply</string>
    <string name="empty_result">We cannot find the item you are searching for, maybe a little spelling mistake?</string>
    
    <!--Video-->
    <string name="record_video">Record Video</string>
    <string name="for_mary_sknow">FOR \nMARY SKNOW</string>
    <string name="size">Size 43</string>
    <string name="qty">Qty 2</string>
    <string name="color">Color  [img src=color_shade/]</string>
    <string name="save_video">Save Video</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="save_confirmation_note">Please! send a HiU for her birthday</string>
    <string name="profile_name">Leonardo Test</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="search_settings">Start searching in settings...</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="dummy_message">Happy Birthday...!</string>
    
    <!--Settings-->
    <string name="number_requests_allowed">Number request allowed</string>
    <string name="number_requests_allowed_option_one">0 - 10</string>
    <string name="number_requests_allowed_option_two">10 - 50</string>
    <string name="number_requests_allowed_option_three">+50</string>
    <string name="my_charity_preferences">My charity Preference</string>
    <string name="notification">Notification</string>
    <string name="value_min_request">Value min request</string>
    <string name="balance">Balance</string>
    <string name="more_options">More options</string>
    <string name="recent_request">Recent request</string>
    <string name="logout">Logout</string>

    <!--Charity Preferences-->
    <string name="charity_1">United Way Worldwide</string>
    <string name="charity_2">Task Force for Global Health</string>
    <string name="charity_3">Feeding America</string>
    <string name="charity_4">Salvation Army</string>
</resources>
