<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hiulatam.hiu.hiuartist.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_button_navigation_view"
                android:src="@drawable/ic_action_charity_0009_menu"
                android:background="@android:color/transparent"
                android:layout_gravity="start|center_vertical"/>
            <com.an.customfontview.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requests"
                android:layout_gravity="center_horizontal"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_button_settings"
                android:src="@drawable/ic_charity_0012_objeto_inteligente_vectorial"
                android:layout_gravity="end|center_vertical"
                android:background="@android:color/transparent"/>
            <android.support.v7.widget.SearchView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search_view_celebrity"
                android:layout_gravity="end|center_vertical"></android.support.v7.widget.SearchView>



        </android.support.v7.widget.Toolbar>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"></View>
        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tab_layout_celebrity"
            app:tabGravity="fill"
            app:tabMode="fixed"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:background="@drawable/shape_charity_header">

            <android.support.design.widget.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/date"/>

            <android.support.design.widget.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/country"/>

            <android.support.design.widget.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/name"/>

        </android.support.design.widget.TabLayout>



    </android.support.design.widget.AppBarLayout>



    <include layout="@layout/content_main" />



</android.support.design.widget.CoordinatorLayout>
